Commented out initial server impl and used object names for refactored impl (i.e. in models etc)
