# src/server/micro-services/cleversafe-reports/src/main/java/gov/nih/nci/hrp/ms/cleversafereports/integration/CleversafeManagementBroker.java
@@ -9,7 +9,6 @@
 package gov.nih.nci.hrp.ms.cleversafereports.integration;
 
 import gov.nih.nci.hrp.common.exception.HrpException;
-import gov.nih.nci.hrp.ms.cleversafereports.model.NewVaultSummary;
 import gov.nih.nci.hrp.ms.cleversafereports.model.VaultSummary;
 
 import java.util.Collection;
@@ -27,7 +26,7 @@ public interface CleversafeManagementBroker {
      * @return A collection of vault summary.
      * @throws Exception on cloud storage management system failure.
      */
-    Collection<VaultSummary> getVaultsSummary() throws HrpException;
+    //Collection<VaultSummaryOld> getVaultsSummary() throws HrpException;
 
     /**
      * Get summary report for all cloud storage vaults.
@@ -35,5 +34,5 @@ public interface CleversafeManagementBroker {
      * @return A collection of vault summary.
      * @throws Exception on cloud storage management system failure.
      */
-    Collection<NewVaultSummary> getVaultSummary() throws HrpException;
+    Collection<VaultSummary> getVaultSummary() throws HrpException;
 }
